# schematics

./: pyproject.toml
.github/workflows/: pytest.yml
schematics/: transforms.py
schematics/types/: compound.py
tests/: test_datastructures.py  test_models.py  test_serialize.py
